--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -79,7 +79,7 @@
 
 <!-- Portfolio Item
 ================================================== -->
-<section class="portfolio-item">
+<section class="portfolio-item" id='com-first'>
     <div class="video-overlay"></div>
     <div class="container-fluid">
 
@@ -130,12 +130,12 @@
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Une expérience <span>renouvelée</span> pour vos clients</h2><br/><br/>
+                    <h2 class="wow fadeIn animated">Un nouveau canal de communicaion, les <span>notifications push</span></h2><br/><br/>
                       <p class="wow fadeIn animated">
-                              Statistique constatée dans un parc d'attraction du nord de Paris :<br/>
+                              Statistique constatée par Accengage :<br/>
                       </p>
                       <h3 class="wow fadeIn animated">
-                          <span class="minutes">13</span> minutes d'amusement pour <span class="minutes">95</span> minutes d'attente
+                          <span class="minutes">44%</span>  de taux de lecture, <span class="minutes">10%</span>  de taux de réaction
                       </h3>
                     <br><br>
                 </div>
@@ -151,30 +151,30 @@
 
  <!-- Image Section
 ================================================== -->
-<section class="image-section filedattente" id="portfolio-details-file">
+<section class="image-section communication" id="portfolio-details-file">
     <div class="container">
 
         <div class="row">
 
             <div class="col-md-12">
                 <h2 class="wow fadeIn animated">
-                    <span>Augmentez votre chiffre d'affaires</span>
+                    <span>Envoyer des messages pertinents</span>
                 </h2>
                 <br><br>
                 <h3 class="wow fadeIn animated">
-                    Un <span>gain d'espace</span> lié à la <span>suppression</span> de l'attente physique
+                    Notifiez vos cients à proximité de points de vente, grâce au <span>géomarketing</span>
                 </h3>
                 <br>
                 <h3 class="wow fadeIn animated">
-                    Une <span>augmentation des consomations</span> dans les boutiques et restaurants
+                    Personalisez vos messages grâce aux <span>profils utilisateurs</span>
                 </h3>
                 <br>
                 <h3 class="wow fadeIn animated">
-                    Une <span>diminution des conflits</span> liés aux désaccords dans les files
+                    <span>Automatisez</span> vos campagnes
                 </h3>
                 <br>
                 <h3 class="wow fadeIn animated">
-                    Une <span>sécurité renforcée</span> grâce à la diminution des attroupements
+                    Communiquez en <span>multi-langues</span>
                 </h3>
                 <br>
                 <br>
@@ -212,37 +212,6 @@
         </div>
     </div>
 </section>
-    
-<!-- Services Section
-================================================== -->
-<section id="services-attente" class="services-section">
-
-    <div class="container-fluid">
-
-        <div class="row">
-
-            <div class="col-md-12 service-content">
-
-                <div class="service-image">
-                    <img src="assets/images/iphone6_1.png" alt="iphone"> <br><br>
-                    <p>Une interface de prise de ticket directement sur votre site.</p>
-                </div>
-                <div class="service-image">
-                    <img src="assets/images/iphone6_2.png" alt="iphone"><br><br>
-                    <p>L'application avertit le client de l'avancement.</p>
-                </div>
-                <div class="service-image">
-                    <img src="assets/images/iphone6_3.png" alt="iphone"><br><br>
-                    <p>Le client est avertit lorsque que son approche.</p>
-                </div>
-            </div>
-            <!-- .service-content -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-<!-- /.service-section -->
 
 <!-- Contact Section
 ================================================== -->
@@ -400,7 +369,7 @@
 
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["La nouvelle expérience de l'attente"];
+    var sentences = ["Communiquez plus efficacement"];
 </script>
 <script src="assets/js/custom/portfolio-item.js"></script>
 </body>
