--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -130,9 +130,9 @@
             <div class="col-lg-12">
 
                 <div class="about-text">
-                    <h2 class="wow fadeIn animated">Un nouveau canal de communicaion, les <span>notifications push</span></h2><br/><br/>
+                    <h2 class="wow fadeIn animated">Un nouveau canal de communicaion, les <span>notifications push</span></h2><br/><br>
                       <p class="wow fadeIn animated">
-                              Statistique constatée par Accengage :<br/>
+                              Statistique constatée :<br/>
                       </p>
                       <h3 class="wow fadeIn animated">
                           <span class="minutes">44%</span>  de taux de lecture, <span class="minutes">10%</span>  de taux de réaction
@@ -188,31 +188,34 @@
 </section>
 <!-- /.image section -->   
     
-<section id="wedo" class="skills-section">
+<!-- Call To Action Section
+================================================== -->
+<section id="com-call-to" class="call-to-section">
+
+    <div class="call-to-layer"></div>
 
     <div class="container">
 
         <div class="row">
 
             <div class="col-md-12">
-                <div class="skills-headline">
-                    <h2 class="wow fadeIn animated">
-                        <span>La solution ?</span>
-                    </h2>
-                    <br><br>
-                    <h3 class="wow fadeIn animated">
-                        Une application qui permet à <span>vos clients</span> de prendre un ticket et <span>d'attendre</span> en <span>faisant autre chose.</span>
-                    </h3>
-                    <h3 class="wow fadeIn animated">
-                        L'application avertit de <span>l'avancement de la file d'attente</span> et lorsque leur tour approche.
-                    </h3>
-                </div>
+                <h2 class="wow fadeIn animated">Des notifications qui parlent à vos clients</h2>
+                <br>
+                <h3 class="wow fadeIn animated">
+                        Âge, sexe, nombre d'enfants, intérêts, actions dans l'application, device, OS ...
+                </h3>
+                <h3 class="wow fadeIn animated">
+                        Les possibilités de personnalisation sont infinies, et vous permettront de <span>booster</span> vos taux de réaction jusqu’à <span>4 fois</span>.
+                </h3>
             </div>
             <!-- /.col-md-12 -->
         </div>
+        <!-- /.row -->
     </div>
+    <!-- /.container -->
 </section>
-
+<!-- /.call-to-section -->
+    
 <!-- Contact Section
 ================================================== -->
 <section id="contact" class="contact-section">
