--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -137,7 +137,7 @@
 
             <div class="col-md-12 service-content">
                 <div class="service-image">
-                    <img src="assets/images/fidelisation-little.jpg" alt="iphone">
+                    <img src="assets/images/fidelisation-little.jpg" alt="iphone" id='fidelisation-photo'>
                 </div>
                 <div class="right">
                     <div class="service-2 wow fadeIn animated">
