--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -158,7 +158,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 ================================================== -->
 <section id="big-image" class="image-section"></section>
 <!-- /.image section -->
-  
+
 <section id="our-work" class="our-work-section">
 
     <div class="container-fluid">
@@ -200,7 +200,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img second" onClick="window.location.href='fidelisation.html';">
-                            <img class="img-responsive" src="assets/images/fidelisation.jpg"
+                            <img class="img-responsive" src="assets/images/fidel.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
                             <div class="sweep-from-center">
@@ -226,7 +226,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
-                        <img class="img-responsive" src="assets/images/attente-little.jpg"
+                        <img class="img-responsive" src="assets/images/iwatch-attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
@@ -251,7 +251,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img fourth" onClick="window.location.href='communication.html';">
-                        <img class="img-responsive" src="assets/images/com.jpg"
+                        <img class="img-responsive" src="assets/images/ipad-com.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
@@ -477,7 +477,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               Pour consulter nos offres, rendez-vous sur un écran plus large !</p>
           </div>
 </section>
-    
+
 <!-- Call To Action Section
 ================================================== -->
 <section id="call-to" class="call-to-section">
