--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -102,7 +102,7 @@
                                 </div>
                                 <!-- /.typed-headline -->
 
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">
+                                <a href="#service-details" class="btn btn-default pull-right hvr-sweep-to-right page-scroll" id="project-info">
                                 En savoir plus ...</a>
                             </div>
                         </div>
@@ -338,6 +338,6 @@
 <script>
     var sentences = ["Comment nous fidélisons vos clients..."];
 </script>
-<script src="assets/js/custom/portfolio-item.js"></script>
+<script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
 </html>
