--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -102,7 +102,7 @@
                                 </div>
                                 <!-- /.typed-headline -->
 
-                                <a href="#" class="btn btn-default pull-right hvr-sweep-to-right" id="project-info">
+                                <a href="#about2" class="btn btn-default pull-right hvr-sweep-to-right page-scroll" id="project-info">
                                 En savoir plus ...</a>
                             </div>
                         </div>
@@ -402,6 +402,6 @@
 <script>
     var sentences = ["La nouvelle expérience de l'attente"];
 </script>
-<script src="assets/js/custom/portfolio-item.js"></script>
+<script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
 </html>
