--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -48,10 +48,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Navigation Menu
 ================================================== -->
 <header>
-    <div id="st-logo">
-        <a href="#0">
-        </a>
-    </div>
+    <div id="st-logo"><a href="#0"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
