fix contact button

--- a/particle_dark/communication.html
+++ b/particle_dark/communication.html
@@ -343,6 +343,8 @@
 </section>
 <!-- /.contact-section -->
 
+<a class="btn btn-default page-scroll" href="#contact"><i class="material-icons">chat</i></a>
+    
 <!-- Footer
 ================================================== -->
 <footer>
@@ -374,6 +376,6 @@
 <script>
     var sentences = ["Communiquez plus efficacement"];
 </script>
-<script src="assets/js/custom/particle-theme-light-yt.js"></script>
+<script src="assets/js/custom/particle-theme-light.js"></script>
 </body>
 </html>
