--- a/particle_dark/fidelisation.html
+++ b/particle_dark/fidelisation.html
@@ -307,6 +307,8 @@
 </section>
 <!-- /.contact-section -->
 
+<a class="btn btn-default page-scroll" href="#contact"><i class="material-icons">chat</i></a>
+
 <!-- Footer
 ================================================== -->
 <footer>
@@ -338,6 +340,6 @@
 <script>
     var sentences = ["Comment nous fidélisons vos clients..."];
 </script>
-<script src="assets/js/custom/particle-theme-light-yt.js"></script>
+<script src="assets/js/custom/particle-theme-light.js"></script>
 </body>
 </html>
