--- a/particle_dark/file-dattente.html
+++ b/particle_dark/file-dattente.html
@@ -371,6 +371,8 @@
 </section>
 <!-- /.contact-section -->
 
+<a class="btn btn-default page-scroll" href="#contact"><i class="material-icons">chat</i></a>
+
 <!-- Footer
 ================================================== -->
 <footer>
@@ -402,6 +404,6 @@
 <script>
     var sentences = ["La nouvelle expérience de l'attente"];
 </script>
-<script src="assets/js/custom/particle-theme-light-yt.js"></script>
+<script src="assets/js/custom/particle-theme-light.js"></script>
 </body>
 </html>
