--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -302,6 +302,8 @@
 </section>
 <!-- /.contact-section -->
 
+<a class="btn btn-default page-scroll" href="#contact"><i class="material-icons">chat</i></a>
+
 <!-- Footer
 ================================================== -->
 <footer>
