--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -320,6 +320,8 @@
 <!-- jQuery -->
 <script src="assets/js/libraries/jquery-2.2.4.js"></script>
 <!-- Bootstrap Core JavaScript -->
+<script src="assets/js/libraries/jquery.easing.1.3.js"></script>
+
 <script src="assets/js/libraries/bootstrap.js"></script>
 <!-- JavaScript Libraries -->
 <script src="assets/js/libraries/typed.js"></script>
