change soluparcs to amuseo

--- a/particle_dark/mentions-legales.html
+++ b/particle_dark/mentions-legales.html
@@ -1,9 +1,9 @@
 <div>
 <div style="text-align: center">MENTIONS LÉGALES DU SITE</div> <br>
-<div style="text-align: center">Soluparcs</div> <br>
+<div style="text-align: center">Amuseo</div> <br>
 <br>
-Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs du site Soluparcs les présentes mentions légales. <br>
-Le site Soluparcs est accessible à l'adresse suivante : https://soluparcs.fr (ci-après "le Site"). <br>
+Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs du site Amuseo les présentes mentions légales. <br>
+Le site Amuseo est accessible à l'adresse suivante : https://amuseo.fr (ci-après "le Site"). <br>
 L'accès et l'utilisation du Site sont soumis aux présentes " Mentions légales" détaillées ci-après ainsi qu'aux lois et/ou règlements applicables. <br>
 La connexion, l'utilisation et l'accès à ce Site impliquent l'acceptation intégrale et sans réserve de l'internaute de toutes les dispositions des présentes Mentions Légales. 
 <br><br>
@@ -11,7 +11,7 @@ ARTICLE 1 - INFORMATIONS LÉGALES
 <br><br>
 En vertu de l'Article 6 de la Loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé dans cet article l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi. 
     <br>
-Le site Soluparcs est édité par : 
+Le site Amuseo est édité par : 
 <br><br>
 SAS Morman Design 
 <br>
@@ -23,14 +23,14 @@ Adresse e-mail : contact@morman.fr ci après " l'Éditeur "<br>
 <br>
 Le Directeur de publication est : Moreau Alexis <br>
 Adresse e-mail de contact : moreau.alexis@morman.fr ci après " le Directeur de publication " <br>
-Le site Soluparcs est hébergé par : <br><br>
+Le site Amuseo est hébergé par : <br><br>
 OVH <br>
 dont le siège est situé à l'adresse suivante : <br>
 2 Rue Kellermann 59100 Roubaix <br>
 Téléphone : 09 72 10 10 07 <br>
 Adresse e-mail : contact@ovh.fr. ci après " l'Hébergeur " <br>
 <br>
-Sont considérés comme utilisateurs tout les internautes qui naviguent, lisent, visionnent et utilisent le site Soluparcs. ci après les " Utilisateurs " 
+Sont considérés comme utilisateurs tout les internautes qui naviguent, lisent, visionnent et utilisent le site Amuseo. ci après les " Utilisateurs " 
 <br><br>
 ARTICLE 2 - ACCESSIBILITÉ 
 <br><br>
@@ -43,7 +43,7 @@ En outre, il est conforme aux dispositions de la Loi 78-17 du 6 janvier 1978 rel
 <br><br>
 ARTICLE 4 - POLITIQUE DE COOKIES 
 <br><br>
-Le site Soluparcs a éventuellement recours aux techniques de "cookies" lui permettant de traiter des statistiques et des informations sur le trafic, de faciliter la navigation et d'améliorer le service pour le confort de l'Utilisateur. Conformément à la législation européenne, le site Soluparcs a mis à jour sa politique de confidentialité en matière de cookies. L'Utilisateur est libre d'accepter ou de refuser les cookies de tous les sites internet en modifiant les paramètres de son navigateur internet.
+Le site Amuseo a éventuellement recours aux techniques de "cookies" lui permettant de traiter des statistiques et des informations sur le trafic, de faciliter la navigation et d'améliorer le service pour le confort de l'Utilisateur. Conformément à la législation européenne, le site Amuseo a mis à jour sa politique de confidentialité en matière de cookies. L'Utilisateur est libre d'accepter ou de refuser les cookies de tous les sites internet en modifiant les paramètres de son navigateur internet.
 <br><br>
 ARTICLE 5 - CONTACT 
 <br><br>
