add link on logo top

--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -45,7 +45,7 @@
 <!-- Navigation Menu
 ================================================== -->
 <header>
-    <div id="st-logo"><a href="#0"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
+    <div id="st-logo"><a href="index.html#page-top"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
