--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -48,11 +48,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Navigation Menu
 ================================================== -->
 <header style="background-color: #0c161e;">
-    <div id="st-logo">
-        <a href="#0">
-            <img src="assets/images/logo-blanc-amuseo.png" alt="Logo">
-        </a>
-    </div>
+    <div id="st-logo"><a href="index.html#page-top"><img src="assets/images/logo-blanc-amuseo.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
