--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -116,44 +116,57 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.hero-section -->
 
-<!-- About Us Section
-================================================== -->
-<section id="three-points" class="about-section">
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-lg-12">
-
-                <div class="about-text">
-                    <ul class="about-icons list-inline">
-                        <li class="wow fadeIn animated">
-                            <div class="icon"><i class="material-icons">remove_red_eye</i></div>
-                            <div class="text">Visibilté améliorée</div>
-                        </li>
-                        <li class="wow fadeIn animated">
-                            <div class="icon"><i class="material-icons">mood</i></div>
-                            <div class="text">Expérience client décuplée</div>
-                        </li>
-                        <li class="wow fadeIn animated">
-                            <div class="icon"><i class="material-icons">card_travel</i></div>
-                            <div class="text">Orienté Business</div>
-                        </li>
-                    </ul>
-                    <!-- /.about-icons -->
-                </div>
-            </div>
-            <!-- /.col-md-12 -->
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</section>
-<!-- /.about-section -->
-
 <!-- Image Section
 ================================================== -->
-<section id="big-image" class="image-section"></section>
+<section id="big-image" class="image-section" 
+         style='background: url(./assets/images/image-section.jpg) no-repeat 50% 50% fixed;
+                height: 38em;
+                border-top: 20px solid black;
+                border-bottom: 10px solid black;
+                '>
+    <div class="container-right" style='width: 45%; float: right; margin-right: 5em;'>
+                    <br>
+                    <br>
+                    <h3 class="wow fadeIn animated">
+                        Nous créons vos outils de visibilité
+                    </h3>
+                    <br>
+                    <br>
+    </div>
+</section>
+
+<section id="big-image" class="image-section" 
+         style='background: url(./assets/images/service-bottom.jpg) no-repeat 50% 50% fixed;
+                height: 38em;
+                border-top: 10px solid black;
+                border-bottom: 10px solid black;
+                '>
+    <div class="container-left" style='width: 45%; float: left; margin-left: 5em;'>
+                    <br>
+                    <br>
+                    <h3 class="wow fadeIn animated">
+                        Expérience client décuplée
+                    </h3>
+                    <br>
+                    <br>
+    </div>
+</section>
+    
+<section id="big-image" class="image-section" 
+         style='background: url(./assets/images/photo-business.jpg) no-repeat 50% 50% fixed;
+                height: 38em;
+                border-top: 10px solid black;
+                '>
+    <div class="container-right" style='width: 45%; float: right; margin-right: 5em;'>
+                    <br>
+                    <br>
+                    <h3 class="wow fadeIn animated">
+                        Orienté Business
+                    </h3>
+                    <br>
+                    <br>
+    </div>
+</section>
 <!-- /.image section -->
 
 <section id="our-work" class="our-work-section">
@@ -402,7 +415,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> Des offres adaptées à <span> vos besoins</span></h2>
+                <h2 class="wow fadeIn animated">Des <span>expériences</span> adaptées</h2>
 
             </div>
 
@@ -410,11 +423,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               <div class="row">
 
             <div class="offre1">
-                <p class="contact-header"><span>Web Experience</span></p>
+                <p class="contact-header"><span>Visibilité</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
-                      <img class="img-responsive" src="assets/images/icon-auto.png">
+                      <img class="img-responsive" src="assets/images/icon-statue.png">
 
                     </div>
                     <div class="info-text wow fadeIn animated">
@@ -424,30 +437,30 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
             <div class="offre1">
-                <p class="contact-header"><span>User Experience</span></p>
+                <p class="contact-header"><span>Visiteurs</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
-                      <img class="img-responsive" src="assets/images/icon-roue.png">
+                      <img class="img-responsive" src="assets/images/icon-musee.png">
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Augmentez votre nombre de clients et fidélisez-les</p>
+                        <p>Faites vivre une nouvelle expérience à vos clients</p>
                     </div>
                 </div>
 
             </div>
 
             <div class="offre1">
-                <p class="contact-header"><span>Business Experience</span></p>
+                <p class="contact-header"><span>Valeur</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
-                      <img class="img-responsive" src="assets/images/icon-grand-8.png">
+                      <img class="img-responsive" src="assets/images/icon-chateau.png">
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Augmentez votre chiffre d'affaires</p>
+                        <p>Augmentez votre nombre de clients et fidélisez-les</p>
                     </div>
                 </div>
 
