--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -128,7 +128,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        Nous créons vos outils de visibilité
+                        Nous créons <span> vos plateformes </span> et <span> la visibilité </span> dont vous avez besoin
                     </h3>
                     <br>
                     <br>
@@ -145,7 +145,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        Expérience client décuplée
+                        Nous développons <span> des expériences inédites </span>pour vos clients
                     </h3>
                     <br>
                     <br>
@@ -161,7 +161,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <br>
                     <br>
                     <h3 class="wow fadeIn animated">
-                        Orienté Business
+                        Grâce à <span>nos outils </span>digitaux, augmentez <span>votre acquisition client</span>
                     </h3>
                     <br>
                     <br>
