--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -153,7 +153,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 
 <section id="big-image" class="image-section"
-         style='background: url(./assets/images/photo-business.jpg) no-repeat 50% 50% fixed;
+         style='background: url(./assets/images/business.png) no-repeat 50% 50% fixed;
                 height: 38em;
                 border-top: 10px solid black;
                 '>
