--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -416,6 +416,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 service-headline">
                 <h2 class="wow fadeIn animated">Des <span>expériences</span> adaptées</h2>
+                <h4 class="wow fadeIn animated">Nos offres</h4>
 
             </div>
 
@@ -431,7 +432,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Améliorez la visibilité de votre plateforme</p>
+                        <p>Apportez la visibilité à votre enseigne </p>
                     </div>
                 </div>
             </div>
@@ -460,7 +461,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Augmentez votre nombre de clients et fidélisez-les</p>
+                        <p>Améliorez vos outils digitaux et augmentez votre chiffre d'affaire</p>
                     </div>
                 </div>
 
