--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -62,7 +62,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <a class="page-scroll hvr-underline-from-center" href="#page-top">Accueil</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#three-points">Nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="#big-image">Nous</a>
             </li>
             <li>
                 <a class="page-scroll hvr-underline-from-center" href="#our-work">Nos outils</a>
