--- a/particle_dark/mentions-legales.html
+++ b/particle_dark/mentions-legales.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="utf-8">
+</head>
 <div>
 <div style="text-align: center">MENTIONS LÉGALES DU SITE</div> <br>
 <div style="text-align: center">Amuseo</div> <br>
@@ -51,3 +56,4 @@ Pour tout signalement de contenus ou d'activités illicites, l'Utilisateur peut 
 </div>
 <br><br>
 <a href="index.html">Retour au site</a>
+</html>
