--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -150,7 +150,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 
 <section id="big-image" class="image-section"
-         style='background: url(./assets/images/service-bottom.jpg) no-repeat 50% 50% fixed;
+         style='background: url(./assets/images/layer-2.png) no-repeat 50% 50% fixed;
                 height: 38em;
                 border-top: 10px solid black;
                 border-bottom: 10px solid black;
