--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -429,8 +429,14 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated">Des <span>expériences</span> adaptées</h2>
-                <h4 class="wow fadeIn animated">Nos offres</h4>
+                <h2 class="wow fadeIn animated">Des <span>expériences</span> digitales</h2>
+
+
+            </div>
+
+            <div class="col-md-12 service-content">
+
+                <h4 class="wow fadeIn animated">Nos offres adaptées</h4>
 
             </div>
 
@@ -438,7 +444,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
               <div class="row">
 
             <div class="offre1">
-                <p class="contact-header"><span>Visibilité</span></p>
+                <p class="contact-header"><span>Visibility</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
@@ -446,13 +452,13 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Apportez la visibilité à votre enseigne </p>
+                        <p>Designez la visibilité de vos plateformes </p>
                     </div>
                 </div>
             </div>
 
             <div class="offre1">
-                <p class="contact-header"><span>Visiteurs</span></p>
+                <p class="contact-header"><span>Visitor</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
@@ -467,7 +473,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
             <div class="offre1">
-                <p class="contact-header"><span>Valeur</span></p>
+                <p class="contact-header"><span>Value</span></p>
                 <br>
                 <div class="info-line">
                     <div class="info-icon wow fadeIn animated">
@@ -475,7 +481,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Améliorez vos outils digitaux et augmentez votre chiffre d'affaire</p>
+                        <p>La puissance digital au service de votre business</p>
                     </div>
                 </div>
 
@@ -484,11 +490,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </div>
       <br><br>
             <!-- /.service-headline -->
-          <div class="col-md-12 service-headline">
-            <p class="wow fadeIn animated">
-              <a href="offres.html">Consulter ici</a> nos offres en détails
-              </p>
-          </div>
+
 
         <!-- /.row -->
     </div>
