offre en savoir plus

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -453,7 +453,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                     <div class="info-text wow fadeIn animated">
                         <p>Designez la visibilité de vos plateformes </p>
+
                     </div>
+                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+
                 </div>
             </div>
 
@@ -468,6 +471,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>Faites vivre une nouvelle expérience à vos clients</p>
                     </div>
+                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </div>
 
             </div>
@@ -483,6 +487,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>La puissance digital au service de votre business</p>
                     </div>
+                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </div>
 
             </div>
@@ -516,7 +521,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="row">
 
             <div class="col-md-12">
-                <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une nouvelle expérience</h3>
+                <h3 class="wow fadeIn animated">Ouvrez les perspectives d'une expérience sur-mesure</h3>
                 <a class= "page-scroll" href="#contact">
                 <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
                 </a>
