--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -455,7 +455,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <p>Designez la visibilité de vos plateformes </p>
 
                     </div>
-                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                    <a href="offres.html">
+                    <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                  </a>
 
                 </div>
             </div>
@@ -471,7 +473,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>Faites vivre une nouvelle expérience à vos clients</p>
                     </div>
-                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                    <a href="offres.html">
+                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                    </a>
                 </div>
 
             </div>
@@ -487,7 +491,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="info-text wow fadeIn animated">
                         <p>La puissance digital au service de votre business</p>
                     </div>
-                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="#contact">Contactez-nous</button>
+                    <a href="offres.html">
+                      <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
+                    </a>
                 </div>
 
             </div>
