--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -197,7 +197,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img first" onClick="window.location.href='cartographie.html';">
-                            <img class="img-responsive" src="assets/images/carto-little-2.png"
+                            <img class="img-responsive" src="assets/images/carto-icon.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
                             <div class="sweep-from-center">
@@ -471,7 +471,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                     </div>
                     <div class="info-text wow fadeIn animated">
-                        <p>Faites vivre une nouvelle expérience à vos clients</p>
+                        <p>Faites vivre une nouvelle expérience à vos visiteurs</p>
                     </div>
                     <a href="offres.html">
                       <button class="btn btn-default page-scroll wow fadeInRight hvr-sweep-to-right animated" href="offres.html">En savoir plus</button>
