--- a/particle_dark/offres.html
+++ b/particle_dark/offres.html
@@ -93,17 +93,17 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="col-sm-4"></div>
                 <div class="col-sm-2">
                   <div class="text2">
-                   <p> Web experience </p>
+                   <p> Visibility </p>
                   </div>
                 </div>
                 <div class="col-sm-2">
                   <div class="text2">
-                   <p> User experience </p>
+                   <p> Visitor </p>
                   </div>
                 </div>
                 <div class="col-sm-2">
                   <div class="text2">
-                   <p> Business experience </p>
+                   <p> Value </p>
                   </div>
                 </div>
               </div>
