--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -224,7 +224,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img second" onClick="window.location.href='fidelisation.html';">
-                            <img class="img-responsive" src="assets/images/fidel-little.png"
+                            <img class="img-responsive" src="assets/images/parcours-icon.png"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
                             <div class="sweep-from-center">
@@ -250,7 +250,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img third" onClick="window.location.href='file-dattente.html';">
-                        <img class="img-responsive" src="assets/images/iwatch-attente.png"
+                        <img class="img-responsive" src="assets/images/attente-icon.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
@@ -275,7 +275,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-3 col-sm-6 col-xs-6">
                     <div class="portfolio-img fourth" onClick="window.location.href='communication.html';">
-                        <img class="img-responsive" src="assets/images/ipad-com.png"
+                        <img class="img-responsive" src="assets/images/com-icon.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
